# Minimalistic-Comfy-Wrapper-WebUI

./: .env.example  .gitattributes  .gitignore  CODE_OPTIMIZATION_GUIDE.md  Changelog.md  LICENSE  Readme.md  __init__.py  baseStatesKey  graphToApi.sh  pyproject.toml  requirements.txt  script.js  standalone-start.cmd  standalone-start.py  standalone-start.sh  start.cmd  start.sh  style.css
comfy_web_dir/: mcww.js  web.js
docs/: installation.md  moreAboutOtherFeatures.md  moreScreenshots.md  pwaAndSecureContext.md  titles.md
mcww/: arguments.py  comfyAPI.py  comfyExtension.py  mainUI.py  mcwwAPI.py  nodeUtils.py  opts.py  presets.py  processing.py  projectUI.py  queueUI.py  queueing.py  shared.py  sidebarUI.py  standalone.py  utils.py  webUIState.py  workflow.py  workflowConverting.py  workflowState.py  workflowUI.py
mcww/comfy/: comfyAPI.py  comfyExtension.py  comfyFile.py  comfyUtils.py  messages.py  nodeUtils.py  workflow.py  workflowConverting.py
mcww/ui/: compareUI.py  debugUI.py  helpersUI.py  imageEditorUI.py  mainUI.py  mcwwAPI.py  presetsPageUI.py  presetsUI.py  presetsUIUtils.py  presetsWorkflowUI.py  progressAPI.py  projectUI.py  queueUI.py  sidebarUI.py  uiUtils.py  webUIState.py  workflowUI.py
mcww/ui/misc/: debug.py  fileOpen.py  helpersUI.py  hotkeys.py  imageEditor.py  infoTab.py  loras.py  management.py  metadata.py  optionsUI.py
mcww_web/: autoClickers.js  callbacks.js  gallery.js  jsconfig.json  mainUIMode.js  mainUIPage.js  misc.js  pull.js  queue.css  queue.js  queueing.js  resizeHandle.js  saveState.js  saveStates.js  script.js  sidebar.css  sidebar.js  style.css  workflow.css
mcww_web/assets/: iconify.txt
mcww_web/css/: buttons.css  gallery.css  helpers.css  imageEditor.css  layout.css  misc.css  options.css  patches.css  presets.css  progress.css  project.css  queue.css  sidebar.css  sidebarProjects.css  workflow.css
mcww_web/css/misc/: buttons.css  contextMenu.css  footer.css  helpers.css  layout.css  loadingPlaceholder.css  loras.css  mcwwAlert.css  mcwwMenu.css  mouseAlerts.css  others.css  resizeHandle.css
mcww_web/fonts/: NotoSansSymbols2.css  SourceSansPro.css
mcww_web/js/: gallery.js  galleryButtons.js  helpers.js  historyStates.js  imageEditor.js  mainUIPage.js  misc.js  presets.js  progress.js  project.js  pull.js  queue.js  saveStates.js  sidebar.js  utils.js  utilsElements.js  utilsFiles.js
mcww_web/js/misc/: backendChecks.js  clipboard.js  compare.js  contextMenu.js  (+18 more)
mcww_web/pwa/: round.py  round.sh  serviceWorker.js
src/: arguments.py  comfy.py  comfyExtension.py  gradioApplyHijacks.py  main.py  mainUI.py  nodeUtils.py  node_utils.py  opts.py  parse_title.py  processing.py  settings.py  standalone.py  utils.py  workflow.py  workflowConverting.py  workflowUI.py  workflow_converter.py
