[project]
name = "Minimalistic Comfy Wrapper WebUI"
description = "A minimalistic Gradio UI that dynamically adapts to the selected workflow"
version = "0.0"
license = { file = "LICENSE" }
dependencies = ["gradio=5", "websocket-client", "python-socketio", "python-dotenv"]

[project.urls]
Repository = "https://github.com/light-and-ray/Minimalistic-Comfy-Wrapper-WebUI"

[tool.comfy]
PublisherId = "light-and-ray"
DisplayName = "Minimalistic Comfy Wrapper WebUI"
Icon = ""
